# toggl2jira

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
toggl2jira/: cli.py  config.py  jira.py  toggl.py
